add url pour chercher avec titre
